design page update
updated display part

--- a/design.html
+++ b/design.html
@@ -41,6 +41,46 @@
                             </svg>
                         </a>
                     </div>
+                    <div class="detail_content_wrapper">
+                        <div class="detail_content_logo">
+                            <h1>Design<br>&amp;<br>Arts</h1>
+                        </div>
+                        <div class="detail_content_main">
+                            <div class="detail_content_head">
+                                <div class="detail_content_nav">
+                                    <ol>
+                                        <li class="detail_nav_item" id="placeholder"></li>
+                                        <li class="detail_nav_item" id="detail_nav_item_1">
+                                            <a href="#">Digital<br>Illustration</a>
+                                        </li>
+                                        <li class="detail_nav_item" id="detail_nav_item_2">
+                                            <a href="#">Web<br>Design</a>
+                                        </li>
+                                        <li class="detail_nav_item" id="detail_nav_item_3">
+                                            <a href="#">Photography</a>
+                                        </li>
+                                        <li class="detail_nav_item" id="detail_nav_item_4">
+                                            <a href="#">Sketch</a>
+                                        </li>
+                                        <li class="detail_nav_item" id="placeholder"></li>
+                                    </ol>
+                                </div>
+                            </div>
+                            <div class="detail_content_display">
+                                <div class="display">
+                                    <div class="display_shadow" id="display_shadow_1"></div>
+                                    <img class="display_img" src="img/design/IMG_0222%206.57.07%20PM.JPG" id="display_img_1">
+                                    <div class="display_text" id="display_text_1"></div>
+                                    
+                                    <div class="spacer"></div>
+                                    <div class="display_shadow" id="display_shaodw_2"></div>
+                                    <img class="display_img" src="img/design/IMG_1276.JPG">
+                                    <div class="display_text" id="display_text_2"></div>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
