--- a/design.html
+++ b/design.html
@@ -49,6 +49,17 @@
                             </svg>
                         </a>
                     </div>
+                    <div class="detail_content">
+                        <div class="detail_main_circle"></div>
+                        <div class="detail_main_display">
+                            <div class="img_display" id="img_display_1">
+                                <div class="display_pic">
+                                    <img src="img/design/IMG_0222%206.57.07%20PM.JPG">
+                                </div>
+                                <div class="display_decription"></div>
+                            </div>
+                        </div>
+                    </div>
                     
                 </div>
             </div>
