design.html working
animation worked
right button worked
left button remains to be tested

--- a/preloader.html
+++ b/preloader.html
@@ -15,9 +15,12 @@
         <script src="js/barba.min.js"></script>
         
         <script src="js/TweenMax.min.js"></script>
+        <script src="js/TweenLite.min.js"></script>
         <script src="js/TimelineMax.min.js"></script>
         <script src="js/ScrollMagic.min.js"></script>
         <script src="js/plugins/animation.gsap.js"></script>
+        <script src="js/plugins/CSSPlugin.min.js"></script>
+        <script src="js/plugins/ScrollToPlugin.min.js"></script>
         
 <!--        customize script-->
         <script src="js/utility/combined.js"></script>
