--- a/design.html
+++ b/design.html
@@ -110,7 +110,7 @@
                                             <img src="img/design/missing_home.jpg">
                                         </div>
                                         <div class="display_item" id="display_item_5">
-                                            <img src="img/design/bruce.png">
+                                            <img src="img/design/bruce.jpg">
                                         </div>
                                     </div>
                                 </div>
