last commit for archive version

--- a/design.html
+++ b/design.html
@@ -30,8 +30,9 @@
         <main id="barba-wrapper">
             <div class="barba-container">
                 <a class="home_logo_button" href="preloader.html">
-                    <div>Back</div>
+                    <div class="home_logo_text">Back</div>
                 </a>
+                <div class="home_logo_circle"></div>
                 <div class="design">
                     <div class="detail_title_pic" id="design_title_pic"></div>
                     <div class="detail_title_text" id="design_title_text">
