index page background updated

--- a/version_2/index.html
+++ b/version_2/index.html
@@ -42,14 +42,10 @@
 				</ul>
 			</div>
 			
-			<div class="index-drop" id="index-drop-1">
-				<img src="graphics/dark_purple_stroke_drops_2_sized.png">
+			<div class="index-background">
+				<img src="media/pigment_drop.png">
 			</div>
 			
-			<div class="index-drop" id="index-drop-2">
-				<img src="graphics/dark_purple_stroke_drops_sized.png">
-			</div>
-
 			<div class="index-poster col-xs-12">
 				<div class="index-title">
 					<span id="C">C</span>
