index page fade out animation finished

--- a/version_2/index.html
+++ b/version_2/index.html
@@ -43,7 +43,7 @@
 			</div>
 			
 			<div class="index-background">
-				<img src="media/pigment_drop.png">
+				<img src="media/pigment_drop_clean.png">
 			</div>
 			
 			<div class="index-poster col-xs-12">
