design.html structure completed

--- a/version_2/index.html
+++ b/version_2/index.html
@@ -9,8 +9,7 @@
         
         <link rel="stylesheet" type="text/css" href="css/style.css">
       
-        <!-- bootstrap grid -->
-        <link rel="https://cdn.jsdelivr.net/npm/bootstrap-grid-only@1.0.0/bootstrap.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
               integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:300,400,500,600,700,800,900
@@ -30,20 +29,22 @@
 	<body class="index">
 		<div class="index-container">
 			
+			<ul class="navbar">
+				<li>-Design&amp;Art.Works-</li>
+				<li>-Work.Experience-</li>
+				<li>-Tech.Projects-</li>
+				<li>-Education-</li>
+				<li>-Resume-</li>
+			</ul>
+<!--
 			<div class="index-wrap-round">
 				<span id="title">Candy.Dong.Work.Collection.Site.2017.</span>
 				<span id="education">Carnegie.Mellon.University.2020.Junior.Eletrical.and.Computer.Engineering&amp;Machine.Learning.</span>
-				<ul class="navbar">
-					<li>-Design&amp;Art.Works-</li>
-					<li>-Work.Experience-</li>
-					<li>-Tech.Projects-</li>
-					<li>-Education-</li>
-					<li>-Resume-</li>
-				</ul>
 			</div>
 			
+-->
 			<div class="index-background">
-				<img src="media/pigment_drop_clean.png">
+				<img src="media/pigment_drop_small.png">
 			</div>
 			
 			<div class="index-poster col-xs-12">
