design.html select stroke animation finished

--- a/version_2/index.html
+++ b/version_2/index.html
@@ -22,6 +22,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/jquery.gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/ScrollToPlugin.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/CSSPlugin.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js"></script>
       
 		<script type="text/javascript" src="js/main.js"></script>
 		
@@ -44,7 +45,7 @@
 			
 -->
 			<div class="index-background">
-				<img src="media/pigment_drop_small.png">
+				<img src="media/pigment_light.png">
 			</div>
 			
 			<div class="index-poster col-xs-12">
@@ -69,7 +70,7 @@
 		</div>
 		
 		<script type="text/javascript">
-			index_main.init();
+			index.init();
 		</script>
 	</body>
 </html>
