navbar style issue fixed

--- a/version_2/design.html
+++ b/version_2/design.html
@@ -30,15 +30,31 @@
 	<body class="design">
 <!--		<div class="design-background"></div>-->
 		
-		<ul class="navbar">
-			<li>-Design&amp;Art.Works-</li>
-			<li>-Work.Experience-</li>
-			<li>-Tech.Projects-</li>
-			<li>-Education-</li>
-			<li>-Resume-</li>
-		</ul>
-		
 		<div class="design-content-wrapper">
+			
+			<div class="nav-bar-container">
+				<ul class="nav-bar">
+					<li id="design">
+						<a href="design.html">-Design&amp;Art-</a>
+					</li>
+					<li id="work">
+						<a href="#">-Work.Experience-</a>
+					</li>
+					<li id="tech">
+						<a href="#">-Tech.Projects-</a>
+					</li>
+					<li id="education">
+						<a href="#">-Education-</a>
+					</li>
+					<li id="resume">
+						<a href="#">-Resume-</a>
+					</li>
+					<li id="home">
+						<a href="index.html">-Home-</a>
+					</li>
+				</ul>
+			</div>
+			
 			<div class="main-content">
 				
 				<div class="work row" id="work-1">
