--- a/version_2/index.html
+++ b/version_2/index.html
@@ -29,14 +29,28 @@
     </head>
 	<body class="index">
 		<div class="index-container">
-			
-			<ul class="navbar">
-				<li>-Design&amp;Art.Works-</li>
-				<li>-Work.Experience-</li>
-				<li>-Tech.Projects-</li>
-				<li>-Education-</li>
-				<li>-Resume-</li>
-			</ul>
+			<div class="nav-bar-container">
+				<ul class="nav-bar">
+					<li id="design">
+						<a href="design.html">-Design&amp;Art-</a>
+					</li>
+					<li id="work">
+						<a href="#">-Work.Experience-</a>
+					</li>
+					<li id="tech">
+						<a href="#">-Tech.Projects-</a>
+					</li>
+					<li id="education">
+						<a href="#">-Education-</a>
+					</li>
+					<li id="resume">
+						<a href="#">-Resume-</a>
+					</li>
+					<li id="home">
+						<a href="index.html">-Home-</a>
+					</li>
+				</ul>
+			</div>
 <!--
 			<div class="index-wrap-round">
 				<span id="title">Candy.Dong.Work.Collection.Site.2017.</span>
@@ -61,9 +75,6 @@
 					<span id="G">G</span>
 					<span id="dot">
 						<i class="fas fa-square-full"></i>
-					</span>
-					<span class="scroll-down">
-						<i class="fas fa-arrow-down"></i>
 					</span>
 				</div>
 			</div>
