--- a/version_2/index.html
+++ b/version_2/index.html
@@ -51,15 +51,13 @@
 					</li>
 				</ul>
 			</div>
-<!--
-			<div class="index-wrap-round">
-				<span id="title">Candy.Dong.Work.Collection.Site.2017.</span>
-				<span id="education">Carnegie.Mellon.University.2020.Junior.Eletrical.and.Computer.Engineering&amp;Machine.Learning.</span>
-			</div>
 			
--->
 			<div class="index-background">
 				<img src="media/pigment_light.png">
+			</div>
+			
+			<div class="index-bottom">
+				<span>Candy.Dong.Work.Collection.Site.2017.</span><span>Carnegie.Mellon.University.2020.Junior.&nbsp;&nbsp;&nbsp;Eletrical.and.Computer.Engineering&amp;Machine.Learning.</span>
 			</div>
 			
 			<div class="index-poster col-xs-12">
