working on barbajs

--- a/version_2/index.html
+++ b/version_2/index.html
@@ -27,59 +27,63 @@
 		<script type="text/javascript" src="js/main.js"></script>
 		
     </head>
-	<body class="index">
-		<div class="index-container">
-			<div class="nav-bar-container">
-				<ul class="nav-bar">
-					<li id="design">
-						<a href="design.html">-Design&amp;Art-</a>
-					</li>
-					<li id="work">
-						<a href="#">-Work.Experience-</a>
-					</li>
-					<li id="tech">
-						<a href="#">-Tech.Projects-</a>
-					</li>
-					<li id="education">
-						<a href="#">-Education-</a>
-					</li>
-					<li id="resume">
-						<a href="#">-Resume-</a>
-					</li>
-					<li id="home">
-						<a href="index.html">-Home-</a>
-					</li>
-				</ul>
-			</div>
-			
-			<div class="index-background">
-				<img src="media/pigment_light.png">
-			</div>
-			
-			<div class="index-bottom">
-				<span>Candy.Dong.Work.Collection.Site.2017.</span><span>Carnegie.Mellon.University.2020.Junior.&nbsp;&nbsp;&nbsp;Eletrical.and.Computer.Engineering&amp;Machine.Learning.</span>
-			</div>
-			
-			<div class="index-poster col-xs-12">
-				<div class="index-title">
-					<span id="C">C</span>
-					<span id="A">A</span>
-					<span id="N1">N</span>
-					<span id="D1">D</span>
-					<span id="Y">Y</span>
-					<span id="D2">D</span>
-					<span id="O">O</span>
-					<span id="N2">N</span>
-					<span id="G">G</span>
-					<span id="dot">
-						<i class="fas fa-square-full"></i>
-					</span>
+	<body class="index" id="barba-wrapper">
+		<div class="barba-container">
+			<div class="index-container">
+				<div class="nav-bar-container">
+					<ul class="nav-bar">
+						<li id="design">
+							<a href="design.html">-Design&amp;Art-</a>
+						</li>
+						<li id="work">
+							<a href="#">-Work.Experience-</a>
+						</li>
+						<li id="tech">
+							<a href="#">-Tech.Projects-</a>
+						</li>
+						<li id="education">
+							<a href="#">-Education-</a>
+						</li>
+						<li id="resume">
+							<a href="#">-Resume-</a>
+						</li>
+						<li id="home">
+							<a href="index.html">-Home-</a>
+						</li>
+					</ul>
 				</div>
+
+				<div class="index-background">
+					<img src="media/pigment_light.png">
+				</div>
+
+				<div class="index-bottom">
+					<span>Candy.Dong.Work.Collection.Site.2017.</span><span>Carnegie.Mellon.University.2020.Junior.&nbsp;&nbsp;&nbsp;Eletrical.and.Computer.Engineering&amp;Machine.Learning.</span>
+				</div>
+
+	<!--
+				<div class="index-poster col-xs-12">
+					<div class="index-title">
+						<span id="C">C</span>
+						<span id="A">A</span>
+						<span id="N1">N</span>
+						<span id="D1">D</span>
+						<span id="Y">Y</span>
+						<span id="D2">D</span>
+						<span id="O">O</span>
+						<span id="N2">N</span>
+						<span id="G">G</span>
+						<span id="dot">
+							<i class="fas fa-square-full"></i>
+						</span>
+					</div>
+				</div>
+	-->
 			</div>
 		</div>
-		
 		<script type="text/javascript">
 			index.init();
+			nav_anim.init();
 		</script>
 	</body>
 </html>
