barba init issue fixed

--- a/version_2/index.html
+++ b/version_2/index.html
@@ -83,7 +83,7 @@
 		</div>
 		<script type="text/javascript">
 			//index.init();
-			//nav_anim.init();
+			nav_anim.init();
 		</script>
 	</body>
 </html>
