barbajs issue fixed, navbar anim completed

--- a/version_2/index.html
+++ b/version_2/index.html
@@ -29,30 +29,30 @@
     </head>
 	<body class="index" id="barba-wrapper">
 		<div class="barba-container">
+			<div class="nav-bar-container">
+				<ul class="nav-bar">
+					<li id="design">
+						<a href="design.html">-Design&amp;Art-</a>
+					</li>
+					<li id="work">
+						<a href="#">-Work.Experience-</a>
+					</li>
+					<li id="tech">
+						<a href="#">-Tech.Projects-</a>
+					</li>
+					<li id="education">
+						<a href="#">-Education-</a>
+					</li>
+					<li id="resume">
+						<a href="#">-Resume-</a>
+					</li>
+					<li id="home">
+						<a href="index.html">-Home-</a>
+					</li>
+				</ul>
+			</div>
 			<div class="index-container">
-				<div class="nav-bar-container">
-					<ul class="nav-bar">
-						<li id="design">
-							<a href="design.html">-Design&amp;Art-</a>
-						</li>
-						<li id="work">
-							<a href="#">-Work.Experience-</a>
-						</li>
-						<li id="tech">
-							<a href="#">-Tech.Projects-</a>
-						</li>
-						<li id="education">
-							<a href="#">-Education-</a>
-						</li>
-						<li id="resume">
-							<a href="#">-Resume-</a>
-						</li>
-						<li id="home">
-							<a href="index.html">-Home-</a>
-						</li>
-					</ul>
-				</div>
-
+				
 				<div class="index-background">
 					<img src="media/pigment_light.png">
 				</div>
@@ -82,8 +82,8 @@
 			</div>
 		</div>
 		<script type="text/javascript">
-			//index.init();
-			nav_anim.init();
+			barba.init();
+			nav.init();
 		</script>
 	</body>
 </html>
