--- a/version_2/design.html
+++ b/version_2/design.html
@@ -29,30 +29,32 @@
     </head>
 	<body class="design" id="barba-wrapper">
 		<div class="barba-container">
+			<div class="transit-wrapper">
+				<div class="box"></div>
+			</div>
+			<div class="nav-bar-container">
+				<ul class="nav-bar">
+					<li id="design">
+						<a href="design.html">-Design&amp;Art-</a>
+					</li>
+					<li id="work">
+						<a href="#">-Work.Experience-</a>
+					</li>
+					<li id="tech">
+						<a href="#">-Tech.Projects-</a>
+					</li>
+					<li id="education">
+						<a href="#">-Education-</a>
+					</li>
+					<li id="resume">
+						<a href="#">-Resume-</a>
+					</li>
+					<li id="home">
+						<a href="index.html">-Home-</a>
+					</li>
+				</ul>
+			</div>
 			<div class="design-content-wrapper">
-
-				<div class="nav-bar-container">
-					<ul class="nav-bar">
-						<li id="design">
-							<a href="design.html">-Design&amp;Art-</a>
-						</li>
-						<li id="work">
-							<a href="#">-Work.Experience-</a>
-						</li>
-						<li id="tech">
-							<a href="#">-Tech.Projects-</a>
-						</li>
-						<li id="education">
-							<a href="#">-Education-</a>
-						</li>
-						<li id="resume">
-							<a href="#">-Resume-</a>
-						</li>
-						<li id="home">
-							<a href="index.html">-Home-</a>
-						</li>
-					</ul>
-				</div>
 
 				<div class="main-content">
 
@@ -221,10 +223,5 @@
 			</div>
 	
 		</div>
-		
-		
-		<script type="text/javascript">
-			design.init();
-		</script>
 	</body>
 </html>
