working on design details layout

--- a/version_2/design_details.html
+++ b/version_2/design_details.html
@@ -59,9 +59,115 @@
 					<div class="project-wrapper" id="project-wrapper-1">
 						<div class="project">
 							<div class="project-pic">
-								<img src="media/imagine.jpeg" height="1000px">
+								<img src="media/imagine.jpeg">
 							</div>
-							<div class="project-description">
+							<div class="project-intro">
+								<div class="title">
+									<span>Imagine</span>
+								</div>
+								<div class="intro">
+									<span>paint tool sai. 2018.07.</span>
+									<span>Illustration for Tecent's new mobile game, Free Imagination.</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project-wrapper" id="project-wrapper-2">
+						<div class="env"></div>
+						<div class="project">
+							<div class="project-pic">
+								<img src="media/book_store.JPG">
+							</div>
+							<div class="project-intro">
+								<div class="title">
+									<span>Book.Store.</span>
+								</div>
+								<div class="intro">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project-wrapper" id="project-wrapper-3">
+						<div class="project">
+							<div class="project-pic">
+								<img src="media/listen.png">
+							</div>
+							<div class="project-intro">
+								<div class="title">
+									<span></span>
+								</div>
+								<div class="intro">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project-wrapper" id="project-wrapper-4">
+						<div class="project">
+							<div class="project-pic">
+								<img src="media/in_the_1980s.JPG">
+							</div>
+							<div class="project-intro">
+								<div class="title">
+									<span></span>
+								</div>
+								<div class="intro">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project-wrapper" id="project-wrapper-5">
+						<div class="project">
+							<div class="project-pic">
+								<img src="media/missing_home.jpg">
+							</div>
+							<div class="project-intro">
+								<div class="title">
+									<span></span>
+								</div>
+								<div class="intro">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project-wrapper" id="project-wrapper-6">
+						<div class="project">
+							<div class="project-pic col-5">
+								<img src="media/the_back_of_my_hand.JPG">
+							</div>
+							<div class="project-intro col-7">
+								<div class="title">
+									<span></span>
+								</div>
+								<div class="intro">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project-wrapper" id="project-wrapper-7">
+						<div class="project">
+							<div class="project-pic">
+								<img src="media/bruce.jpg">
+							</div>
+							<div class="project-intro">
+								<div class="title">
+									<span></span>
+								</div>
+								<div class="intro">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project-wrapper" id="project-wrapper-8">
+						<div class="project">
+							<div class="project-pic">
+								<img src="media/smell.JPG">
+							</div>
+							<div class="project-intro">
+								<div class="title">
+									<span></span>
+								</div>
+								<div class="intro">
+								</div>
 							</div>
 						</div>
 					</div>
