--- a/version_2/design_details.html
+++ b/version_2/design_details.html
@@ -56,6 +56,7 @@
 				<div class="details" id="details-1">
 				</div>
 				<div class="details" id="details-2">
+<!--
 					<div class="project-wrapper" id="project-wrapper-1">
 						<div class="project">
 							<div class="project-pic">
@@ -72,21 +73,25 @@
 							</div>
 						</div>
 					</div>
+-->
 					<div class="project-wrapper" id="project-wrapper-2">
 						<div class="env"></div>
-						<div class="project">
-							<div class="project-pic">
-								<img src="media/book_store.JPG">
+						<div class="project row">
+							<div class="project-pic col-8 offset-2">
+								<img src="media/book_store.JPG" width="100%">
 							</div>
-							<div class="project-intro">
+							<div class="project-intro col-12">
 								<div class="title">
 									<span>Book.Store.</span>
 								</div>
 								<div class="intro">
+									<span>paint tool sai. 2018.01</span>
+									<span>Game design for friends' mobile game project which is still in progress.</span>
 								</div>
 							</div>
 						</div>
 					</div>
+<!--
 					<div class="project-wrapper" id="project-wrapper-3">
 						<div class="project">
 							<div class="project-pic">
@@ -171,6 +176,7 @@
 							</div>
 						</div>
 					</div>
+-->
 				</div>
 			</div>
 			
