--- a/version_2/index.html
+++ b/version_2/index.html
@@ -52,11 +52,11 @@
 			<div class="index-container">
 				
 				<div class="index-background">
-					<img src="media/pigment_light.png">
+<!--					<img src="media/background.png">-->
 				</div>
 
 				<div class="index-bottom">
-					<span>Candy.Dong.Work.Collection.Site.2017.</span><span>Carnegie.Mellon.University.2020.Junior.&nbsp;&nbsp;&nbsp;Eletrical.and.Computer.Engineering&amp;Machine.Learning.</span>
+					<span>Candy.Dong.Work.Collection.Site.2017.</span><span>Carnegie.Mellon.University.2020.Junior.&nbsp;&nbsp;&nbsp;Eletrical.and.Computer.Engineering&nbsp;&amp;&nbsp;Machine.Learning.</span>
 				</div>
 
 	<!--
