design details updated

--- a/version_2/index.html
+++ b/version_2/index.html
@@ -50,11 +50,11 @@
 				</ul>
 			</div>
 			<div class="index-container">
-				
-				<div class="index-background">
-<!--					<img src="media/background.png">-->
-				</div>
 
+				<div class="particles-container">
+					<div class="particle-inner"></div>
+				</div>
+				
 				<div class="index-bottom">
 					<span>Candy.Dong.Work.Collection.Site.2017.</span><span>Carnegie.Mellon.University.2020.Junior.&nbsp;&nbsp;&nbsp;Eletrical.and.Computer.Engineering&nbsp;&amp;&nbsp;Machine.Learning.</span>
 				</div>
