tech.html work.html added

--- a/version_2/index.html
+++ b/version_2/index.html
@@ -34,10 +34,10 @@
 						<a href="design.html">-Design&amp;Art-</a>
 					</li>
 					<li id="work">
-						<a href="#">-Work.Experience-</a>
+						<a href="work.html">-Work.Experience-</a>
 					</li>
 					<li id="tech">
-						<a href="#">-Tech.Projects-</a>
+						<a href="tech.html">-Tech.Projects-</a>
 					</li>
 					<li id="resume">
 						<a href="#">-Resume-</a>
@@ -59,7 +59,7 @@
 			</div>
 			<div class="index-container">
 				<div class="index-title">
-					<span>Candy.Dong.<br>Work.Collection.Site.<br>2017.</span>
+					<span>Candy.Dong.<br>Work.Collection.Site.<br>2018.</span>
 				</div>
 				
 				<div class="index-info">
