--- a/version_2/tech.html
+++ b/version_2/tech.html
@@ -57,7 +57,48 @@
 				</svg>
 			</div>
 			
-			<div class="content-wrapper"></div>
+			<div class="content-wrapper">
+				<div class="details" id="details-1">
+					<div class="details-header">
+						<span>'''UI/UX<br>&nbsp;&nbsp;PROJECTS'''</span>
+					</div>
+					<div class="project-wrapper" id="ux-wrapper-1">
+						<div class="project row">
+							<div class="project-intro col-4">
+								<div class="number">
+									<span>01.</span>
+								</div>
+								<div class="title">
+									<span>TartanHacks<br>-Sign<br>Language<br>Recognizer<br>with Myo</span>
+									<span>Myo Armband<br>LibSVM<br>C#/Python</span>
+								</div>
+								<div class="intro">
+									<span><strong>Voco</strong> is an assistive app that can translate <strong>sign languages</strong> into words using data from <strong>Myo</strong>, a bluetooth-connected wearable armband. We built a classifier using an <strong>SVM</strong> (support vector machine) model implemented with <strong>libsvm</strong>. </span>
+									<br>
+									<span>This prototype was able to distinguish 6 words: HELLO, MY, NAME, TARTAN, HACKS, WHATSUP. </span>
+									<br>
+									<span><strong>Speech recognition</strong> was implemented using <strong>Google's Speech Recognition API</strong> to help people who don't sign communicate better with hearing and speech impaired people.</span>
+									<br>
+									<span>This is a <strong>hackathon</strong> project developed during <strong>TartanHacks 2018 </strong>at <strong>Carnegie Mellon University</strong>. Team members are <strong>Justin Chu, Qingyi Dong, Bruce Liu, and Jacky Zou</strong>.
+									</span>
+								</div>
+							</div>
+							<div class="project-pic col-8">
+								<div class="project-pic-part row">
+									<div class="col-5">
+										<video style="max-width: 100%; height: auto;" controls>
+										  <source src="media/tartanHacks.mp4" type="video/mp4">
+										</video>
+										<span>A simple DEMO recorded before our presentation. The sign language recognizer successfully recognized all the sign languages Jackie made with Myo armband.</span>
+									</div>
+								</div>
+								
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 		</div>
 	</body>
 </html>
